<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/title_bg" >

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_more_menu" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_more_info"
            android:textColor="#ffffffff"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/more_RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/more_app"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/icon" />

        <TextView
            android:id="@+id/more_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/more_app"
            android:text="@string/app_name"
            android:textColor="#ff000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/more_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/more_version"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/more_app"
            android:text="@string/app_description"
            android:textColor="#ff000000"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_quit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/waitress"
            android:textColor="#ff000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_waiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_toRightOf="@+id/textView1"
            android:text="test"
            android:textColor="#ff000000"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="false"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/button_logout_selector"
        android:shadowColor="#7f000000"
        android:shadowDx="0.0"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:text="@string/logout"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</RelativeLayout>